# System

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: admin.py  forms.py  models.py  serializers.py  tables.py  urls.py  views.py
app/migrations/: 0001_initial.py  0002_remove_appconfig_resource_slogs_visible_to_self_scheduling_and_more.py  0002_resourceslugvisible_title.py  0003_alter_appconfig_options_and_more.py  0004_alter_appconfig_background_image_and_more.py
authentication/: admin.py  models.py  permissions.py  services.py  urls.py  views.py
authentication/migrations/: 0001_initial.py  0002_customuser_is_email_checked_and_more.py  0003_customuser_uid_alter_customuser_id.py
common/: urls.py
core/: models.py  permissions.py  serializers.py  settings.py  urls.py  views.py
core/settings/: api.py  base.py  dev.py  prod.py  ssr.py
customer/: admin.py  models.py
product/: admin.py  models.py
sale/: admin.py  apps.py  models.py
schedule/: admin.py  api.py  filters.py  flows.py  models.py  serializers.py  services.py  urls.py  utils.py  views.py
static/: app.css  components.css  components.js  custom-tags.js  parser.js  query-manager.js  query.js  request-manager.js  state-component.js  state.js  utils.js  web-component-factory.js
stock/: admin.py  api.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
system/: settings.py  urls.py
templates/: app.html  base.html  home.html  navbar.html  schedule.html  ui.html
uri/: apps.py  models.py
users/: api.py  models.py  serializers.py  views.py
(+143 files in other folders)
